# metodos_numericos_parcial

./: .gitignore  AGENTS.md  README.md  parcial_calibracion_markov.ipynb  pyproject.toml  requirements.txt
data/: spy_options_filtered.csv  spy_options_raw.csv  spy_snapshot_meta.json
plans/: plan-parcial-calibracion-markov.md
reference/taller2/: Taller_2_Metodos.ipynb  wip.ipynb
reference/taller3/: Taller3.ipynb
report/: informe.typ
